--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -311,10 +311,16 @@
       <a routerLink="" class="nav-link" routerLinkActive="active">Hotel List</a>
     </li>
     <li class="nav-item">
-      <a routerLink="addHotel" class="nav-link" routerLinkActive="active">Add Hotel</a>
+      <a routerLink="add" class="nav-link" routerLinkActive="active">Add Hotel</a>
+    </li>
+    <li class="nav-item">
+      <a routerLink="addlieu" class="nav-link" routerLinkActive="active">Add Lieu Touri</a>
     </li>
   </ul>
 </nav>
 <h1 class="text-center">e-tourisme</h1>
 <head><base href="./"></head>
 <app-hotel></app-hotel>
+<app-add-hotel></app-add-hotel>
+<app-lieu-touri></app-lieu-touri>
+<app-add-lieu-touri></app-add-lieu-touri>
