--- a/src/app/components/add-transport/add-transport.component.html
+++ b/src/app/components/add-transport/add-transport.component.html
@@ -8,7 +8,7 @@
       <div class="row mb-4">
       <div class="col">
         <div class="form-group">
-            <label for="4">Type de Transport :</label>
+            <label for="4">Type de Transport </label>
             <select class="form-control" id="4" name="type"  [(ngModel)]="transport.type">
               <option value="Train">Train</option>
               <option value="Vol">Vol</option>
@@ -34,7 +34,6 @@
                     <option value="Kénitra">	Kénitra</option>
                     <option value="Tétouan">Tétouan</option>
                     <option value="Safi">Safi</option>
-                    <option value="Tétouani">Tétouan</option>
 
                   </select>
               </div>
@@ -52,7 +51,6 @@
                     <option value="Kénitra">	Kénitra</option>
                     <option value="Tétouan">Tétouan</option>
                     <option value="Safi">Safi</option>
-                    <option value="Tétouani">Tétouan</option>
                   </select>
             </div>
 
