--- a/src/app/components/home-transport/home-transport.component.html
+++ b/src/app/components/home-transport/home-transport.component.html
@@ -1,3 +1,9 @@
-<div class="bg">
+<div class="bg ">
+  <div >
+    <div class="alert alert-success w-50" role="alert"  style="margin:0 auto;text-align: center;">
+      <h4 class="alert-heading" style="margin-top: 1%" >BIENVENUE !</h4>
+      <p>Gérant : {{first_name}} {{last_name}} </p>
+    </div>
+  </div>
     
 </div>
