--- a/src/app/components/home-transport/home-transport.component.css
+++ b/src/app/components/home-transport/home-transport.component.css
@@ -5,4 +5,6 @@ background-image: url("https://www.autourdublog.fr/wp-content/uploads/2016/10/fa
 background-position: center;
 background-repeat: no-repeat;
 background-size: cover;
+background-attachment: fixed;
+
 }
