--- a/src/app/components/add-transport/add-transport.component.html
+++ b/src/app/components/add-transport/add-transport.component.html
@@ -28,11 +28,11 @@
                     <option value="Rabat">Rabat</option>
                     <option value="Agadir">Agadir</option>
                     <option value="Marrakech">Marrakech</option>
-                    <option value="Salé">Salé</option>
-                    <option value="Oujdai">Oujda</option>
-                    <option value="Meknès">Meknès</option>
-                    <option value="Kénitra">	Kénitra</option>
-                    <option value="Tétouan">Tétouan</option>
+                    <option value="Sale">Salé</option>
+                    <option value="Oujda">Oujda</option>
+                    <option value="Meknes">Meknès</option>
+                    <option value="Kenitra">	Kénitra</option>
+                    <option value="Tetouan">Tétouan</option>
                     <option value="Safi">Safi</option>
 
                   </select>
@@ -45,11 +45,11 @@
                     <option value="Rabat">Rabat</option>
                     <option value="Agadir">Agadir</option>
                     <option value="Marrakech">Marrakech</option>
-                    <option value="Salé">Salé</option>
-                    <option value="Oujdai">Oujda</option>
-                    <option value="Meknès">Meknès</option>
-                    <option value="Kénitra">	Kénitra</option>
-                    <option value="Tétouan">Tétouan</option>
+                    <option value="Sale">Salé</option>
+                    <option value="Oujda">Oujda</option>
+                    <option value="Meknes">Meknès</option>
+                    <option value="Kenitra">	Kénitra</option>
+                    <option value="Tetouan">Tétouan</option>
                     <option value="Safi">Safi</option>
                   </select>
             </div>
